[project]
name = "robot-maze-qlearning"
version = "1.0.0"
description = "A Reinforcement Learning project for 3D maze navigation using Q-Learning."
authors = [
    { name = "Harsha Vardhan Reshavena", email = "harshavardhan@example.com" }
]
dependencies = [
    "numpy>=1.19.0",
]
requires-python = ">=3.8"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]
